# decimal

./: .gitignore  Cargo.toml  README.md  package-lock.json  readme.md
.github/: test.yml
.github/workflows/: test.yml
decimal_core/: Cargo.toml
decimal_core/src/: base.rs  big_ops.rs  by_number.rs  checked_ops.rs  factories.rs  lib.rs  ops.rs  others.rs  structs.rs  test.rs  utils.rs
src/: decimal.rs  lib.rs  ops.rs  token_amount.rs  traits.rs  uint.rs  walkthrough.rs
src/operations/: big_ops.rs  factories.rs  mod.rs  ops.rs
