[package]
name = "safe_decimal_macro"
version = "0.1.4"
edition = "2021"
readme = "README.md"
authors = ["Mateusz Zając <matzayonc@gmail.com>"]
repository = "https://github.com/invariant-labs/decimal"
license = "MIT"
description = "This is a Rust fixed-point numeric library targeting blockchain development. Originally created and used as a part of the Invariant Protocol. The current version leverages macros, traits and generics to exchange dozens of lines of error prone code with a single line and generating the rest."

[dependencies]
safe_decimal_core = { path = "decimal_core" }
integer-sqrt = "0.1.5"
uint = { version = "0.9", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
