[package]
name = "checked_decimal_macro_core"
version = "0.1.0"
edition = "2021"
authors = ["Mateusz Zając <matzayonc@gmail.com>"]
repository = "https://github.com/invariant-labs/decimal"
description = "A package for macro used in `checked_decimal_macro`"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1"
syn = { version = "1.0.60", features = ["full"] }
