[package]
name = "safe_decimal_core"
version = "0.1.1"
edition = "2021"
authors = ["Mateusz Zając <matzayonc@gmail.com>"]
repository = "https://github.com/invariant-labs/decimal"
readme = "../README.md"
description = "This is a Rust fixed-point numeric library targeting blockchain development. Originally created and used as a part of the Invariant Protocol. The current version leverages macros, traits and generics to exchange dozens of lines of error prone code with a single line and generating the rest."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1"
syn = { version = "1.0.60", features = ["full"] }
